tested CrossOrigin Annotation, but didn't solve the problem